--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,11 @@
+html{
+  height: 100%;
+  margin: 0;
+}
 body {
+  background-image: url('./wallpaper.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +14,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card {
+  background-color: rgba(0, 0, 0, 0.377) !important;
 }
+
