--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,8 @@ html{
 }
 body {
   background-image: url('./wallpaper.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-repeat: repeat;
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
