--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,14 @@
-html{
+html {
   height: 100%;
   margin: 0;
 }
 body {
-  background-image: url('./wallpaper.jpg');
+  background-image: url("./wallpaper.jpg");
   background-repeat: repeat;
   background-size: cover;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -17,4 +17,3 @@ body {
 .card {
   background-color: rgba(0, 0, 0, 0.377) !important;
 }
-
