Arreglada logica para mostrar loader mientras se traen los grupos

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
 .App {
   text-align: center;
 }
+.loader-container {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
